# bjj-ai-agents

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README_webapp.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
app/: config.py  database.py  evaluation.py  llm_utils.py  ui_components.py  user_guide.py
app/agents/: coach_agent.py  game_plan_agent.py  injury_agent.py  router_agent.py
prompts/: coach_prompt_template.txt  game_plan_agent_prompt.txt  injury_agent_prompt.txt  router_prompt.txt
prompts/advanced/: game_plan_agent_self_reflection.txt  game_plan_agent_with_rag.txt  injury_agent_tot.txt  nutritionist_agent_cot.txt  training_agent_planning.txt
prompts/personalities/: james.txt  lacey.txt  mat.txt  ryan.txt
src/: database.py  evaluation.py  llm_utils.py  ui_components.py
src/agents/: coach_agent.py  game_plan_agent.py  injury_agent.py  router_agent.py
