[project]
name = "ai-agent-conference"
version = "0.1.0"
description = "BJJ AI Agents web app for Hugging Face Spaces using Gradio, LangGraph, and LangChain."
authors = [
  { name = "Gwen", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "openai",
    "ipywidgets",
    "chromadb",
    "transformers",
    "sqlalchemy",
    "langgraph>=0.2.0",
    "langchain-tavily",
    "langgraph-checkpoint-sqlite",
    "pandas>=2.0.0",
    "pydantic>=2.0.0"
] 